# Dotfiles

./: .gitignore  .zshrc  README.md  dotbuilder.py  main.sh  pyproject.toml
config/terminator/: config  terminator.desktop
config/zsh/: .zshrc
scripts/: banner.sh  base.sh  harden.sh  setup.sh
