[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Zer0F8th <25908759+Zer0F8th@users.noreply.github.com>"]
packages = [
    { include = "dotbuilder" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
